# devops-copilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
common/: config.py
day1_mcp/: server.py
day1_mcp/kb/: KB-001-crashloopbackoff.md  KB-002-imagepullbackoff.md  KB-003-oomkilled.md  KB-004-pipeline-agent-offline.md  KB-005-terraform-state-lock.md  KB-006-cert-expiry.md  KB-007-prometheus-target-down.md  KB-008-service-connection-expired.md  tickets.json
day2_agent/agent/: adk_agent.py  cli.py  loop.py  mcp_client.py  schemas.py
day2_agent/pipeline/: chunker.py  embedding.py  index.py  ingest.py  run_ingest.py
day3_service/: Dockerfile  compose.yaml
day3_service/app/: main.py  store.py  telemetry.py
day3_service/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
day4_devops/: azure-pipelines.yml
day4_devops/infra/bicep/: main.bicep
day4_devops/infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
day4_devops/monitoring/: grafana-dashboard.json  prometheus-values.yaml  servicemonitor.yaml
day4_devops/scripts/: Publish-Scorecard.ps1  kind-config.yaml  smoke_test.sh
day5_agentic_ops/: diagnose.py  ops_tools.py
day5_agentic_ops/incident_demo/: README.md  broken-image.yaml  oom-demo.yaml
diagrams/: platform_architecture.py  style.py  system_architecture.py
docs/: FUNDAMENTALS.md  PROJECT_PLAN.md
evals/: dataset.jsonl  judge.py  run_eval.py
scripts/: check-env.sh
tests/: test_chunker.py  test_index.py  test_schemas.py
