[project]
name = "devops-copilot"
version = "0.1.0"
description = "Agentic AI triage system for DevOps incidents - local-first, production-shaped"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "mcp>=1.2",
    "openai>=1.40",
    "sqlite-vec>=0.1.6",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[project.optional-dependencies]
adk = ["google-adk>=1.0", "litellm>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
copilot-ingest = "day2_agent.pipeline.run_ingest:main"
copilot-triage = "day2_agent.agent.cli:main"
copilot-diagnose = "day5_agentic_ops.diagnose:main"
copilot-eval = "evals.run_eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "day1_mcp", "day2_agent", "day3_service", "day5_agentic_ops", "evals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
